fixed the white bars on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html, body, #root {
+  min-height: 100%;
+  background-color: #171717;
+}
+
 .App {
   text-align: center;
 }
